fix: swagger error messages
